[package]
name = "titlefy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
eyre = "0.6.8"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
once_cell = "1.17.1"
regex = { version = "1.8.1", default-features = false, features = ["std"] }
reqwest = "0.11.16"
scraper = "0.16.0"

[dependencies.tokio]
version = "1.27.0"
features = ["macros", "rt", "rt-multi-thread", "fs"]
